--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "1.8",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "firebase": "^9.8.4",
+    "firebase-admin": "^11.0.0",
+    "framer-motion": "^6",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
