--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@chakra-ui/react": "1.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.27.2",
     "firebase": "^9.8.4",
     "firebase-admin": "^11.0.0",
     "framer-motion": "^6",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-textarea-autosize": "^8.3.4",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
