--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.4",
     "@chakra-ui/react": "1.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
@@ -15,9 +16,11 @@
     "firebase": "^9.8.4",
     "firebase-admin": "^11.0.0",
     "framer-motion": "^6",
+    "moment": "^2.29.4",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^4.0.0",
     "react-textarea-autosize": "^8.3.4",
     "styled-components": "^5.3.3"
   },
