--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "axios": "^0.27.2",
+    "chrome-aws-lambda": "6",
     "firebase": "^9.8.4",
     "firebase-admin": "^11.0.0",
     "framer-motion": "^6",
     "moment": "^2.29.4",
     "next": "12.0.7",
+    "playwright-core": "^1.24.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^4.0.0",
@@ -46,5 +48,9 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
