--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,7 @@
     "editorSuggestWidget.background": "#0c0d12e7",
     "editorSuggestWidget.focusHighlightForeground": "#FFD700",
     "editorSuggestWidget.border": "#7DCFFF",
-    "tab.activeBorderTop": "#FF1778",
+    "tab.activeBorderTop": "#dcd7ba",
     "editor.selectionBackground": "#20264e",
     "editor.selectionHighlightBackground": "#222a54",
     "editor.selectionHighlightBorder": "#9BC968",
@@ -49,7 +49,6 @@
     "statusBar.background": "#0C0D12",
     "statusBar.foreground": "#dedee3",
     "terminal.background": "#0C0D12",
-    "terminal.foreground": "#dedee3",
     "terminal.ansiGreen": "#87d034",
     "gitDecoration.addedResourceForeground": "#87d034",
     "gitDecoration.modifiedResourceForeground": "#FFD700",
